fix: body overflow on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,8 @@ img {
   #achievement .section .section__text,
   #contact .section .section__text {
     text-align: center;
+    overflow: scroll hidden;
+    text-overflow: ellipsis;
   }
   #home .section .section__img,
   #about .section .section__img,
@@ -339,6 +341,8 @@ img {
   }
   #contact .section {
     height: auto;
+    overflow: scroll hidden;
+    text-overflow: ellipsis;
   }
 }
 
@@ -494,7 +498,6 @@ img {
 
 /* --------------------------- social media layout -------------------------- */
 .footer-social {
-  width: 350px;
   display: block;
   margin: 0 auto 0 0;
   padding-bottom: 80px;
@@ -508,6 +511,7 @@ img {
   margin-top: 10px;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 .footer-social .footer-social__list .footer-social__list__item {
   vertical-align: top;
